manifests/tasksapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasksapp-svc
spec:
  selector:
    app: tasksapp
  ports:
    - port: 8080
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasksapp
  labels:
    app: tasksapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tasksapp
  template:
    metadata:
      labels:
        app: tasksapp
    spec:
      containers:
        - name: tasksapp
          image: evalus/tasksapp-python:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
